# oca-ocb-technical

./: README.md
odoo-bringout-oca-ocb-barcodes/: README.md  pyproject.toml
odoo-bringout-oca-ocb-barcodes/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-barcodes_gs1_nomenclature/: README.md  pyproject.toml
odoo-bringout-oca-ocb-barcodes_gs1_nomenclature/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-calendar/: README.md  pyproject.toml
odoo-bringout-oca-ocb-calendar/calendar/i18n/: bs.po
odoo-bringout-oca-ocb-calendar/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-contacts/: README.md  pyproject.toml
odoo-bringout-oca-ocb-contacts/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-iap/: README.md  pyproject.toml
odoo-bringout-oca-ocb-iap/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-iap_crm/: README.md  pyproject.toml
odoo-bringout-oca-ocb-iap_crm/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-iap_mail/: README.md  pyproject.toml
odoo-bringout-oca-ocb-iap_mail/doc/: ARCHITECTURE.md  (+7 more)
odoo-bringout-oca-ocb-note/: README.md  pyproject.toml
(+15 files in other folders)
